NetBSD Problem Report #45542

From www@NetBSD.org  Sun Oct 30 09:23:13 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id ADA6763CD17
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 30 Oct 2011 09:23:13 +0000 (UTC)
Message-Id: <20111030092313.2283563CAF6@www.NetBSD.org>
Date: Sun, 30 Oct 2011 09:23:13 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Misplaced parenthesis in rshd.c
X-Send-Pr-Version: www-1.0

>Number:         45542
>Category:       bin
>Synopsis:       Misplaced parenthesis in rshd.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Oct 30 09:25:00 +0000 2011
>Closed-Date:    Sun Oct 30 21:46:05 +0000 2011
>Last-Modified:  Sun Oct 30 21:46:05 +0000 2011
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Misplaced parenthesis in rshd.c
>How-To-Repeat:

>Fix:
diff -u -p -r1.48 rshd.c
--- libexec/rshd/rshd.c	27 Aug 2011 17:46:34 -0000	1.48
+++ libexec/rshd/rshd.c	30 Oct 2011 07:39:38 -0000
@@ -457,7 +457,7 @@ doit(struct sockaddr *fromp)
 	}

 	if ((pam_err = pam_set_item(pamh, PAM_RUSER, remuser)) != PAM_SUCCESS ||
-	    (pam_err = pam_set_item(pamh, PAM_RHOST, hostname) != PAM_SUCCESS)){
+	    (pam_err = pam_set_item(pamh, PAM_RHOST, hostname)) != PAM_SUCCESS){
 		syslog(LOG_ERR|LOG_AUTH, "pam_set_item(): %s",
 		    pam_strerror(pamh, pam_err));
 		rshd_errx(EXIT_FAILURE, incorrect);

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45542 CVS commit: src/libexec/rshd
Date: Sun, 30 Oct 2011 12:54:58 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Sun Oct 30 16:54:58 UTC 2011

 Modified Files:
 	src/libexec/rshd: rshd.c

 Log Message:
 PR/45542: Henning Petersen: Misplaced parenthesis in rshd.c


 To generate a diff of this commit:
 cvs rdiff -u -r1.48 -r1.49 src/libexec/rshd/rshd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 30 Oct 2011 21:46:05 +0000
State-Changed-Why:
Christos committed it, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.