PR/45542: Henning Petersen: Misplaced parenthesis in rshd.c